--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.3"
+    "mongoose": "^6.4.3",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
